test/syntax/fail/causality/6.sync
let node g z = o where
  o = z + 1

let node f x = y where
  rec y = g z
  and z = y
